# msdf-atlas-gen

./: CMakeLists.txt
msdfgen/: CMakeLists.txt
